# ChimeraX

./: .gitignore  Makefile
apps/: Makefile
apps/ChimeraX/: Makefile  launcher.c  mkinfo.py
apps/moduleapp/: Makefile
docs/user/tools/: Makefile
mk/: os.make
src/: Makefile  Makefile.bundle
src/add_charge/: bundle_info.xml
src/addh/: bundle_info.xml
src/amber_info/: bundle_info.xml
src/arrays/: Makefile
src/atom_search/: Makefile
src/atomic_lib/: Makefile
src/bundle_builder/: Makefile  entry_points.txt  pyproject.toml
src/bundles/task_manager/src/: cmd.py
src/cmd_line/: bundle_info.xml
src/core/: Makefile  __main__.py  pyproject.toml  setup.py  setup.py.in  tasks.py
src/core/src/: __init__.py  __main__.py  logger.py
src/core/src/toolshed/: installed.py
src/linux_support/src/: _xdg.py
src/looking_glass/: Makefile
src/md_crds/gromacs/: Makefile  Makefile.xdrfile
src/mmcif/mmcif_cpp/: Makefile
src/mmcif/mmcif_cpp/readcif_cpp/: Makefile
src/mmcif/mmcif_cpp/readcif_cpp/cifgrep/: Makefile
src/mmtf/: Makefile
src/pdb/: Makefile
src/pdb/pdb_cpp/: Makefile
src/pdb_lib/: Makefile
src/rotamer_libs/: Makefile
src/segger/: Makefile
src/spacenavigator/: setup.py.in
src/toolshed_utils/: Makefile  pyproject.toml  setup.py
src/webservices/: bundle_info.xml
src/webservices/src/: __init__.py
vdocs/: _vdoc.py
